@@ -22,9 +22,9 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package jdk.nashorn.api.tree;
+package org.openjdk.nashorn.api.tree;
 
-import jdk.nashorn.internal.ir.ForNode;
+import org.openjdk.nashorn.internal.ir.ForNode;
 
 final class ForOfLoopTreeImpl extends StatementTreeImpl implements ForOfLoopTree {
     private final ExpressionTree lhsExpr;
