@@ -30,7 +30,7 @@
  */
 
 import javax.script.*;
-import jdk.nashorn.api.scripting.*;
+import org.openjdk.nashorn.api.scripting.*;
 
 // Simple nashorn demo that evals a script with arbitrary script
 // object bound as "this" for the evaluated script.
